--- a/templates/map.html
+++ b/templates/map.html
@@ -42,10 +42,14 @@ function addPies(map_elements, election) {
     var pie = d3.layout.pie().sort(null).value(function(c) { return getMentions(d, c.mentions); }).padAngle(.1);
     var r = radius(totalMentions(d,election.candidates), election.max);
     var diam = 2*r;
-    var arc = d3.svg.arc().outerRadius(r).innerRadius(r/2); 
+    var arc = d3.svg.arc().outerRadius(r).innerRadius(r*0.4); 
     
-    var pie_svg = d3.select(this).attr("width", diam).attr("height", diam).append("g").attr("transform", "translate("+path.centroid(d)+")");
-    pie_svg.selectAll(".arc").data(pie(election.candidates)).enter().append("path").attr("class", function(c) { return arc_class(c.data); }).attr("d", arc);
+    var pie_svg = d3.select(this).attr("width", diam).attr("height", diam)
+      .append("g").attr("transform", "translate("+path.centroid(d)+")").attr("class",pie_class(d, election.candidates));
+    pie_svg.selectAll(".arc").data(pie(election.candidates)).enter()
+      .append("a").attr("xlink:href", function(c) { return timelineLink(year, c.data.last, d); }).attr("class", function(c) { return arc_class(c.data); })
+      .append("path").attr("d", arc)
+      .append("title").text(function(c) { return "See " + d.properties.name + " coverage of " + c.data.last; });
       //.attr("alt","")
   }
 }
@@ -79,7 +83,7 @@ function getMentions(us_element, mentions) {
 }
   
 function radius(r, max) {
-  var rad = d3.scale.sqrt().domain([0, max]).range([10, 25]);
+  var rad = d3.scale.sqrt().domain([0, max]).range([6, 25]);
   return rad(r);
 }
 
@@ -87,13 +91,15 @@ function arc_class(c) {
   return "arc fill-"+c.color;
 }
   
-function pie_class(el, c) {
-/*  var class_name = "state-winner-" + c.color;
-  if(c.won.includes(el.properties.abbrev)) {
-    class_name += ;
-    class_name += c.color;
+function pie_class(el, cs) {
+  var class_name = "";
+  for(var i=0; i < cs.length; i++) {
+    var c = cs[i];
+    if(c.won.includes(el.properties.abbrev)) {
+      class_name += "state-w-" + c.color;
+    }
   }
-  return class_name;*/
+  return class_name;
 }
 
 function us_element_class(us_element) {
