--- a/templates/map.html
+++ b/templates/map.html
@@ -4,7 +4,7 @@
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script src="//d3js.org/d3-queue.v2.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/map.css') }}">
-<div id="candidates" class="center">
+<div id="candidates" class="center-text">
   <h4>the election of <span class="year">{{e.year}}</span></h4>
   {% for candidate in e.candidates %}
     <div class="candidate"><div class="party fill-{{candidate.color}}"></div>
