--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 #CAEBF2 -- lightest blue
 #ACE0EB -- middle blue
 #8DD4E3 -- light blue
+#C647A5 -- magenta?
 #C3C3C3 -- light gray
 #A9A9A9 -- gray
 #474747 -- carbon
