--- a/templates/ca/index.html
+++ b/templates/ca/index.html
@@ -1,8 +1,8 @@
-{% extends "main_layout.html" %}
+{% extends "ca/layout.html" %}
 {% block body %}
 <div id="election-form" class="center">
 <h4>Choose an election year:</h4>
-<form method="POST" action="/">
+<form method="POST" action="{{ url_for('ca.index') }}">
 {{ form.year.label }} {{ form.year() }}
 {{ form.submit() }}
 </form>
