--- a/templates/ca/layout.html
+++ b/templates/ca/layout.html
@@ -5,7 +5,7 @@
     <title>Chronicling America Challenge</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('ca.static', filename='css/style.css') }}">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
